<resources>
    <string name="app_name">Intellifox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_room">Room</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_routines">Routines</string>
    <string name="menu_routine">Routine</string>
    <string name="menu_electrical_cons">Electrical Consumption</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help_and_feed">Help And Feedback</string>
    <string name="dev_faucet">Taps</string>
    <string name="dev_ac">Air Conditioner</string>
    <string name="dev_alarm">Alarms</string>
    <string name="dev_blinds">Blinds</string>
    <string name="dev_door">Doors</string>
    <string name="dev_refrigerator">Fridges</string>
    <string name="dev_lamp">Lights</string>
    <string name="dev_vacuum">Vacuums</string>
    <string name="dev_speaker">Speakers</string>
    <string name="dev_oven">Ovens</string>
    <string name="create_room">Create Room</string>
    <string name="modify_room">Update Room</string>
    <string name="delete_room">Delete Room</string>
    <string name="get_room">Get Room</string>
    <string name="get_rooms">Get Rooms</string>
    <string name="result">Result: %1$s</string>
    <string name="error_message">Something went wrong: %1$s [%2$d]</string>
    <string name="favourites_title_routines">Routines</string>
    <string name="favourites_title_devices">Devices</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="about_us">About us</string>
    <string name="about_us_text">We are a happy group of students!</string>
    <string name="prompt">Hi, Say something</string>
    <string name="show_notification">Show Notification</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Devices Notifications</string>
    <string name="group_name">Devices Notifications</string>
    <string name="dev_door_state_lock_locked">Locked</string>
    <string name="dev_door_state_lock_unlocked">Unlocked</string>
    <string name="dev_door_button_lock">Lock</string>
    <string name="dev_door_button_unlock">Unlock</string>
    <string name="dev_door_state_open">Opened</string>
    <string name="dev_door_state_closed">Closed</string>
    <string name="dev_vacuum_state_docked">Docked</string>
    <string name="dev_vacuum_button_mop">Mop</string>
    <string name="dev_vacuum_button_vacuum">Vacuum</string>
    <string name="dev_vacuum_button_dock">Dock</string>
    <string name="dev_vacuum_button_docked">Docked</string>
    <string name="dev_vacuum_state_active">Active</string>
    <string name="dev_vacuum_state_inactive">Inactive</string>
    <string name="dev_vacuum_select_mode">Select mode</string>
    <string name="dev_vacuum_select_room">Select room</string>
    <string name="dev_vacuum_battery">Battery</string>
    <string name="dev_vacuum_location">Location</string>
    <string name="dev_vacuum_none">None</string>
    <string name="dev_tap_state_closed">Closed</string>
    <string name="dev_tap_state_opened">Opened</string>
    <string name="dev_tap_button_dispense">Dispense</string>
    <string name="dev_tap_button_dispense_off">Dispensing</string>
    <string name="dev_tap_hint">How many?</string>
    <string name="dev_tap_amount">Amount</string>
    <string name="dev_tap_text_progress">Progress:</string>
    <string name="dev_blind_state_closed">Closed</string>
    <string name="dev_blind_state_opened">Opened</string>
    <string name="dev_blind_state_closing">Closing</string>
    <string name="dev_blind_state_opening">Opening</string>
    <string name="dev_blind_level">Level</string>
    <string name="dev_speaker_stateName_status">Status</string>
    <string name="dev_speaker_stateName_artist">Artist</string>
    <string name="dev_speaker_stateName_title">Title</string>
    <string name="dev_speaker_stateName_album">Album</string>
    <string name="dev_speaker_state_playing">Playing</string>
    <string name="dev_speaker_state_stopped">Stopped</string>
    <string name="dev_speaker_state_paused">Paused</string>
    <string name="dev_speaker_genre">Genre:</string>
    <string name="dev_speaker_genre_clasical">Classical</string>
    <string name="dev_speaker_genre_country">Country</string>
    <string name="dev_speaker_genre_dance">Dance</string>
    <string name="dev_speaker_genre_latina">Latina</string>
    <string name="dev_speaker_genre_pop">Pop</string>
    <string name="dev_speaker_genre_rock">Rock</string>
    <string name="dev_speaker_volume">Volume:</string>
    <string name="dev_speaker_get_playlist">Show Playlist</string>
    <string name="dev_speaker_list_title">Title:</string>
    <string name="dev_speaker_list_artist">Artist:</string>
    <string name="dev_speaker_list_album">Album:</string>
    <string name="dev_speaker_list_duration">Duration:</string>
    <string name="dev_oven_status_on">On</string>
    <string name="dev_oven_status_off">Off</string>
    <string name="dev_oven_title_temperature">Temperature: </string>
    <string name="dev_oven_title_heat">Heat source: </string>
    <string name="dev_oven_title_grill">Grill mode: </string>
    <string name="dev_oven_title_convection">Convection mode: </string>
    <string name="dev_oven_button_heat_conventional">Conventional</string>
    <string name="dev_oven_button_heat_bottom">Bottom</string>
    <string name="dev_oven_button_heat_top">Top</string>
    <string name="dev_oven_button_grill_large">Large</string>
    <string name="dev_oven_button_grill_eco">Eco</string>
    <string name="dev_oven_button_grill_off">Off</string>
    <string name="dev_oven_button_convection_normal">Normal</string>
    <string name="dev_oven_button_convection_eco">Eco</string>
    <string name="dev_oven_button_convection_off">Off</string>
    <string name="dev_ac_status_on">On</string>
    <string name="dev_ac_status_off">Off</string>
    <string name="dev_ac_title_temperature">Temperature: </string>
    <string name="dev_ac_title_mode">Mode: </string>
    <string name="dev_ac_title_vSwing">Vertical swing: </string>
    <string name="dev_ac_title_hSwing">Horizontal swing: </string>
    <string name="dev_ac_title_fan">Fan speed: </string>
    <string name="dev_ac_button_mode_cool">Cool </string>
    <string name="dev_ac_button_mode_heat">Heat </string>
    <string name="dev_ac_button_mode_fan">Fan </string>
    <string name="dev_ac_button_hSwing_auto">Auto </string>
    <string name="dev_ac_button_vSwing_auto">Auto </string>
    <string name="dev_ac_button_fan_auto">Auto </string>
    <string name="dev_light_status_on">On </string>
    <string name="dev_light_status_off">Off </string>
    <string name="dev_light_color">Actual color </string>
    <string name="routine_action_speaker_set_volume">Set Volume </string>
    <string name="routine_action_speaker_play">Play</string>
    <string name="routine_action_speaker_stop">Stop</string>
    <string name="routine_action_speaker_pause">Pause</string>
    <string name="routine_action_speaker_resume">Resume</string>
    <string name="routine_action_speaker_next_song">Next Song</string>
    <string name="routine_action_speaker_previous_song">Previous Song</string>
    <string name="routine_action_speaker_set_genre">Set Genre</string>
    <string name="routine_action_speaker_get_playlist">Get Playlist</string>
    <string name="routine_action_faucet_open">Open</string>
    <string name="routine_action_faucet_close">Close</string>
    <string name="routine_action_faucet_dispense">Dispense</string>
    <string name="routine_action_blinds_open">Open</string>
    <string name="routine_action_blinds_close">Close</string>
    <string name="routine_action_blinds_set_level">Set Level</string>
    <string name="routine_action_lamp_turn_on">Turn On</string>
    <string name="routine_action_lamp_turn_off">Turn Off</string>
    <string name="routine_action_lamp_set_color">Set Color</string>
    <string name="routine_action_lamp_set_brightness">Set Brightness</string>
    <string name="routine_action_oven_turn_on">Turn On</string>
    <string name="routine_action_oven_turn_off">Turn Off</string>
    <string name="routine_action_oven_set_temperature">Set Temperature</string>
    <string name="routine_action_oven_set_heat">Set Heat</string>
    <string name="routine_action_oven_set_grill">Set Grill</string>
    <string name="routine_action_oven_set_convection">Set Convection</string>
    <string name="routine_action_ac_turn_on">Turn On</string>
    <string name="routine_action_ac_turn_off">Turn Off</string>
    <string name="routine_action_ac_set_temperature">Set Temperature</string>
    <string name="routine_action_ac_set_mode">Set Mode</string>
    <string name="routine_action_ac_set_vertical_swing">Set Vertical Swing</string>
    <string name="routine_action_ac_set_horizontal_swing">Set Horizontal Swing</string>
    <string name="routine_action_ac_set_fan_speed">Fan Speed</string>
    <string name="routine_action_door_open">Open</string>
    <string name="routine_action_door_close">Close</string>
    <string name="routine_action_door_lock">Lock</string>
    <string name="routine_action_door_unlock">Unlock</string>
    <string name="routine_action_vacuum_start">Start</string>
    <string name="routine_action_vacuum_pause">Pause</string>
    <string name="routine_action_vacuum_dock">Dock</string>
    <string name="routine_action_vacuum_set_mode">Set Mode</string>
    <string name="routine_action_vacuum_set_location">Set Location</string>
    <string name="notif_additional_changes">Additional Changes: </string>
    <string name="notif_changes">Changes: </string>
    <string name="notif_tap_opened">Was opened.</string>
    <string name="notif_tap_closed">Was closed.</string>
    <string name="notif_tap_dispensing">It is dispensing</string>
    <string name="notif_ac_turned_on">Was turned on.</string>
    <string name="notif_ac_turned_off">Was turned off.</string>
    <string name="notif_ac_changed_mode">Its mode changed</string>
    <string name="notif_ac_changed_temperature">Its temperature changed</string>
    <string name="notif_ac_changed_fan_speed">Its fan speed changed</string>
    <string name="notif_ac_changed_horizontal_swing">Its horizontal swing changed</string>
    <string name="notif_ac_changed_vertical_swing">Its vertical swing changed</string>
    <string name="notif_light_turned_on">Was turned on.</string>
    <string name="notif_light_turned_off">Was turned off.</string>
    <string name="notif_light_changed_brightness">Its brightness changed</string>
    <string name="notif_light_changed_color">Its color changed</string>
    <string name="notif_oven_turned_on">Was turned on.</string>
    <string name="notif_oven_turned_off">Was turned off.</string>
    <string name="notif_oven_changed_temperature">Its temperature changed</string>
    <string name="notif_oven_changed_convection">Its convection mode changed</string>
    <string name="notif_oven_changed_grill">Its grill mode changed</string>
    <string name="notif_oven_changed_heat">Its heat setting changed</string>
    <string name="notif_speaker_turned_on">Was turned on.</string>
    <string name="notif_speaker_turned_off">Was turned off.</string>
    <string name="empty_favourite_devices">You don\'t have any devices in favourites yet. Add one with the heart icon</string>
    <string name="empty_favourite_routines">You don\'t have any routines in favourites yet. Add one with the heart icon</string>
</resources>