<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:theme="@style/AppTheme.ActionBar">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_heart"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_menu_door"
            android:title="@string/menu_rooms" />
        <item
            android:id="@+id/nav_device_types"
            android:icon="@drawable/ic_menu_remote"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_routines"
            android:icon="@drawable/ic_menu_calendar_clock"
            android:title="@string/menu_routines" />
        <item
            android:id="@+id/nav_electrical_cons"
            android:icon="@drawable/ic_menu_lightning_bolt_outline"
            android:title="@string/menu_electrical_cons" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_cog_outline"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help_and_feed"
            android:icon="@drawable/ic_menu_help_circle_outline"
            android:title="@string/menu_help_and_feed" />
    </group>
</menu>