<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="51dp"
                android:layout_height="27dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/favourite"
                android:layout_width="41dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/switch1"
                app:layout_constraintStart_toEndOf="@+id/bell"
                app:layout_constraintTop_toTopOf="@+id/switch1"
                app:srcCompat="@drawable/ic_menu_heart"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/bell"
                android:layout_width="41dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/favourite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/favourite"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_bell_off" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bell" />


            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"

                android:padding="15dp"
                android:text="@string/dev_vacuum_select_mode"
                android:textColor="@color/text"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >


            </LinearLayout>

            <Button
                android:id="@+id/dock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:text="@string/dev_vacuum_button_dock"
                android:textColor="@color/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/vacuumBtn"
                app:layout_constraintStart_toEndOf="@+id/mopBtn"
                app:layout_constraintTop_toTopOf="@+id/selectRoom" />


            <TextView
                android:id="@+id/selectRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="21dp"
                android:textSize="20dp"
                android:text="@string/dev_vacuum_select_room"
                android:textColor="@color/text"
                app:layout_constraintEnd_toStartOf="@+id/mopBtn"
                app:layout_constraintStart_toStartOf="@+id/text"
                app:layout_constraintTop_toBottomOf="@id/text" />

            <Spinner
                android:id="@+id/rooms_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/dock"
                app:layout_constraintStart_toEndOf="@+id/selectRoom"
                app:layout_constraintTop_toTopOf="@id/selectRoom"
                android:prompt="@string/dev_vacuum_none"
                />

            <ToggleButton
                android:id="@+id/vacuumBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:textOff="@string/dev_vacuum_button_vacuum"
                android:textOn="@string/dev_vacuum_button_vacuum"
                app:layout_constraintBottom_toBottomOf="@+id/mopBtn"
                app:layout_constraintStart_toEndOf="@+id/mopBtn"
                app:layout_constraintTop_toTopOf="@+id/mopBtn" />

            <ToggleButton
                android:id="@+id/mopBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:textOff="@string/dev_vacuum_button_mop"
                android:textOn="@string/dev_vacuum_button_mop"
                app:layout_constraintBottom_toBottomOf="@+id/text"
                app:layout_constraintStart_toEndOf="@+id/text"
                app:layout_constraintTop_toTopOf="@+id/text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
