<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="@color/background1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background2"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:maxLength="16"
                android:text="@string/dev_speaker_list_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAlbum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/dev_speaker_list_album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitleContent" />

            <TextView
                android:id="@+id/txtAlbumContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxLength="20"
                android:text="content"
                app:layout_constraintBottom_toBottomOf="@+id/txtAlbum"
                app:layout_constraintStart_toEndOf="@+id/txtAlbum"
                app:layout_constraintTop_toTopOf="@+id/txtAlbum" />

            <TextView
                android:id="@+id/txtTitleContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="content"
                app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                app:layout_constraintStart_toEndOf="@+id/txtTitle"
                app:layout_constraintTop_toTopOf="@+id/txtTitle" />

            <TextView
                android:id="@+id/txtArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/dev_speaker_list_artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAlbumContent" />

            <TextView
                android:id="@+id/txtDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/dev_speaker_list_duration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtArtistContent" />

            <TextView
                android:id="@+id/txtArtistContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="content"
                app:layout_constraintBottom_toBottomOf="@+id/txtArtist"
                app:layout_constraintStart_toEndOf="@+id/txtArtist"
                app:layout_constraintTop_toTopOf="@+id/txtArtist" />

            <TextView
                android:id="@+id/txtDurationContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="content"
                app:layout_constraintBottom_toBottomOf="@+id/txtDuration"
                app:layout_constraintStart_toEndOf="@+id/txtDuration"
                app:layout_constraintTop_toTopOf="@+id/txtDuration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

